# A3-Antistasi-Ultimate-analysis

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: python-app-uv.yml
docs/: index.md
docs-overrides/partials/integrations/analytics/: custom.html
docs/stylesheets/: extra.css
modules/: utils.py
modules/geojson/: feature.py  load.py
modules/map_render/: map_render.py
modules/mission/: __init__.py  mapinfo_hpp_parser.py  marker.py  mission.py  mission_sqm_parser.py  position_2d.py  towns.py  types_.py  utils.py
scripts/: _common.py  _docs_includes.py  analyse_maps.py  analyse_mission.py  analyse_missions.py  build_docs.py  config.toml  constants.py  docs_includes.py  enrich_missions.py
search/: search_index.json
src/: constants.py  dem.py  map_information.py  map_render.py  marker.py  position.py  position_2d.py  types_.py  utils.py
src/geojson/: __init__.py  feature.py  load.py
src/map_render/: __init__.py  dem.py  map_render.py
src/mission/: __init__.py  file.py  mapinfo_hpp_parser.py  marker.py  mission.py  mission_enrich.py  mission_sqm_parser.py  plot.py  position_2d.py  town.py  utils.py
src/parse/: __init__.py  mapinfo_hpp_parser.py  mission_sqm_parser.py
src/static_data/: au_mission_overrides.py  in_game_data.py  map_index.py  static_data.py  verification_data.py
static_data/: au_mission_overrides.py  in_game_data.py  map_index.py
tests/: __init__.py
tests/mission/: __init__.py  test_mapinfo_hpp_parser.py  test_mission_sqm_parser.py
