[project]
name = "a3-antistasi-ultimate-analysis"
version = "0.5.0"
description = "Compare Arma 3 Antistasi Ultimate maps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "armaclass==0.2.2",
    "attrs==25.3.0",
    "cattrs>=24.1.3",
    "mdutils>=1.6.0",
    "pyparsing==3.2.3",
    "rich==14.0.0",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.11",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff~=0.11.4",
]

[tool.mypy]
enable_error_code = ["ignore-without-code"]  # Require specific codes for ignores
warn_unused_configs = true
strict = true
disallow_any_unimported = true  # Disallow Any types resulting from unfollowed imports
no_implicit_optional = true  # Don't assume arguments with default values of None are Optional

[[tool.mypy.overrides]]
# Untyped modules
module = [
    "armaclass.*",
    "mdutils.*"
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    # Rules that conflict with Ruff formatter, or conflict with other rules:
    "COM812",  # Trailing comma missing
    "D203",  # incorrect-blank-line-before-class
    "D212",  # multi-line-summary-first-line
]

# Allow applying these 'unsafe' fixes without the `--unsafe-fixes` flag:
extend-safe-fixes = [
    "TC001",  # Move application import ... into a type-checking block
    "TC003",  #  Move standard library import ... into a type-checking block
]

[tool.ruff.lint.per-file-ignores]
# Not relevant in tests:
"tests/*" = [
    "PLR2004",  # Magic value used in comparison
    "S101",  # Use of assert detected
    "SLF001",  # Private member accessed
]
