[project]
name = "a3-antistasi-ultimate-analysis"
version = "1.0.0"
description = "Compare missions from the Antistasi Ultimate mod for Arma 3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "armaclass>=0.2.2",
    "attrs>=25.4.0",  # CalVer
    "cattrs>=26.1.0",  # CalVer
    "cxxheaderparser>=1.7.0",
    "mkdocs-material>=9.7.2",
    "msgspec>=0.20.0",
    "rich>=14.3.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.mypy]
enable_error_code = ["ignore-without-code"]  # Require specific codes for ignores
warn_unused_configs = true
strict = true
disallow_any_unimported = true  # Disallow Any types resulting from unfollowed imports
no_implicit_optional = true  # Don't assume arguments with default values of None are Optional

[[tool.mypy.overrides]]
# Untyped modules
module = [
    "armaclass.*",
    "mdutils.*"
]
ignore_missing_imports = true

[tool.ruff.lint]
future-annotations = true
flake8-type-checking.runtime-evaluated-base-classes = ["msgspec.Struct"]
flake8-type-checking.runtime-evaluated-decorators = ["attrs.define"]
select = ["ALL"]

ignore = [
    # Rules that conflict with Ruff formatter, or conflict with other rules:
    "COM812",  # Trailing comma missing
    "D203",    # incorrect-blank-line-before-class
    "D212",    # multi-line-summary-first-line
]

# Allow applying these 'unsafe' fixes without the `--unsafe-fixes` flag:
extend-safe-fixes = [
    "TC001",  # Move application import {} into a type-checking block
    "TC002",  # ... third-party import ...
    "TC003",  # ... standard library import ...
]

[tool.ruff.lint.per-file-ignores]
# Not relevant in tests:
"tests/*" = [
    "PLR2004",  # Magic value used in comparison
    "S101",  # Use of assert detected
    "SLF001",  # Private member accessed
]
"scripts/docs_includes.py" = [
   "RUF001",  # String contains ambiguous Unicode character - `×`
]
"src/types.py" = [
   "A005",  # Module shadows a Python standard-library module
]
